# IT-LAB-analog-keyboard

./: .gitignore  .gitmodules  README.md  logboek.md
code/: CMakeLists.txt  README.md  build.sh  main.c
website/: README.md  index.html
website/css/: index.css
website/js/: constants.js  index.js  keyboard.js
website/js/layout/: default.js
website/js/usb/: message.js  usb.js
